--- a/app/scripts/components/tunnusluvut/kysynta/index.html
+++ b/app/scripts/components/tunnusluvut/kysynta/index.html
@@ -1,5 +1,5 @@
 <ng-form id="{{tyyppi + '-liikenteenkysynta-form'}}" name="kysyntaForm" class="kysynta">
-  <juku-form-row>
+  <juku-form-row ng-if="tyyppi==='PSAB' || tyyppi==='PSAK'">
     <div class="table-responsive">
       <table class="table table-hover table-condensed">
         <tr>
