--- a/app/scripts/components/navigation/index.styl
+++ b/app/scripts/components/navigation/index.styl
@@ -6,3 +6,13 @@
   .tabs
     float right
     height 100%
+
+  @media all and (max-width: 560px)
+    .tabs
+      float none
+      margin 1em 0
+    .tab
+      display block
+      border-radius 5px
+      margin 0
+      margin-bottom 0.5em
