--- a/app/scripts/components/footer/index.styl
+++ b/app/scripts/components/footer/index.styl
@@ -4,16 +4,19 @@
   position: absolute
   bottom: 0
   width: 100%
-  line-height: height.navbar
   border-radius: 0px
-
-  .container, .col-md-2, .col-md-4
+  line-height: height.navbar
+  overflow: hidden
+  .container
     height: 100%
+    position: relative
+    padding-right: 9em
+    padding-left: 9em
 
-  .col-xs-8, .col-xs-4
-    padding: 0
-    overflow: hidden
-    height: 100%
+.footer__logo
+  position: absolute
+  left: 1em
 .footer__domain
-  text-align: right
-
+  position: absolute
+  right: 1em
+  top: 0
