LIVIJUKU-473: Tunnuslukujensyöttö tekninen demo viimeistely

--- a/app/scripts/components/tunnusluvut/kysynta/index.html
+++ b/app/scripts/components/tunnusluvut/kysynta/index.html
@@ -38,8 +38,8 @@
     <div class="table-responsive">
       <table class="table table-hover table-condensed">
         <tr>
-          <th class="col-md-3 ekarivi">Nousijat kuukausittain</th>
-          <th class="col-md-1 ekarivi">Nousua/kuukausi</th>
+          <th class="col-md-3 ekarivi">Nousijat</th>
+          <th class="col-md-1 ekarivi">Nousua/kk</th>
           <th class="col-md-8 ekarivi">Vapaat kommentit</th>
         </tr>
         </thead>
