--- a/app/scripts/views/yhteinen/tunnuslukujenSyottaminen.html
+++ b/app/scripts/views/yhteinen/tunnuslukujenSyottaminen.html
@@ -1,4 +1,23 @@
 <div class="container">
+  <ng-form id="tunnusluvutValintaForm" name="tunnusluvutValintaForm">
+    <juku-form-row>
+      <div class="col-md-4">
+        <input type="text" ng-model="selectedOrganisaatio" typeahead="kunta for kunta in kunnat | filter:$viewValue"
+               class="form-control" placeholder="Valitse kunta tai kuntayhtymä">
+      </div>
+      <div class="col-md-2">
+        <select id="vuosi" name="vuosi"
+                ng-model="selectedVuosi" ng-disabled="isReadonly()"
+                placeholder="Valitse vuosi" class="form-control" required>
+          <option value="" selected disabled>Valitse vuosi</option>
+          <option value="2012">2012</option>
+          <option value="2013">2013</option>
+          <option value="2014">2014</option>
+          <option value="2015">2015</option>
+        </select>
+      </div>
+    </juku-form-row>
+  </ng-form>
   <juku-navigation>
     <juku-tabs>
       <juku-tab
