--- a/app/scripts/components/hakemuksenTila/index.styl
+++ b/app/scripts/components/hakemuksenTila/index.styl
@@ -1,8 +1,10 @@
 .tilat
-  height 3em
   padding-top 0.25em
   .label
     margin: 0 1em
+    margin-left: 0
+    margin-bottom: 28px
+
     &.is-upcoming
       opacity: 0.5
 
@@ -18,5 +20,3 @@
         left: 50%
         margin-left: -8px
         bottom: -20px
-  .label:first-child
-    margin-left: 0
