--- a/app/scripts/views/yhteinen/tunnuslukuraportit.html
+++ b/app/scripts/views/yhteinen/tunnuslukuraportit.html
@@ -10,16 +10,27 @@
     </juku-tabs>
   </juku-navigation>
   <div class="row">
-    <h1>Joukkoliikenteen valtionavustushakemukset ja päätökset</h1>
-    <nvd3 options='haettuMyonnettyYhteensaOptions' data='haettuMyonnettyYhteensaArvot' api="haettuMyonnettyYhteensaApi"></nvd3>
+    <h2>Joukkoliikenteen valtionavustushakemukset ja päätökset</h2>
+    <nvd3 options='haettuMyonnettyYhteensaOptions' data='haettuMyonnettyYhteensaData'
+          api="haettuMyonnettyYhteensaApi"></nvd3>
   </div>
   <div class="row">
-    <nvd3 options='haettuMyonnettyOptions' data='haettuMyonnettyArvot' api="haettuMyonnettyApi"></nvd3>
-  </div>
-  <div class="row">
-    <h1>ELY-KESKUKSIEN MÄÄRÄRAHATARVE</h1>
+    <h2 ng-show="isMyonnettyAktiivinen()">Myönnetyt jaoteltuna</h2>
 
-    <h2>Haetut valtionavustukset yhteensä</h2>
-    <nvd3 options="nvd3options2" data="nvd3data2"></nvd3>
+    <h2 ng-hide="isMyonnettyAktiivinen()">Haetut jaoteltuna</h2>
+    <nvd3 options='haettuMyonnettyOptions' data='haettuMyonnettyData' api="haettuMyonnettyApi"></nvd3>
+  </div>
+  <div class="row">
+    <h2>Hakijaorganisaation tarkemmat tiedot</h2>
+
+    <div class="col-md-8">
+      <nvd3 options="organisaationTiedotOptions" data="organisaationTiedotData" api="organisaationTiedotApi"></nvd3>
+    </div>
+    <div class="col-md-4">
+      <h3>{{aktiivinenOrganisaatio}} (vuosi {{aktiivinenOrganisaatioVuosi}})</h3>
+      <p><b>Haettu yhteensä:</b> {{aktiivinenOrganisaatioVuosiHaettu |currency}}</p>
+      <p><b>Asukkaat:</b> {{aktiivinenOrganisaatioAsukkaat}}</p>
+      <p><b>Haettu per asukas:</b> {{haettuPerAsukas() |currency}}</p>
+    </div>
   </div>
 </div>
