LIVIJUKU-513 - form-group komponentin has-error tila näytetään vain jos input on viallinen ja input on vähintään kerran menettänyt fokuksen: 'has-error': input.$invalid && input.$touched. Lisäksi näitä bootstrapin validaatiotila luokkia ei enää aseteta angularin ngClass direktiivillä koska se ei toimi.

--- a/app/scripts/components/formInput/input-compact.html
+++ b/app/scripts/components/formInput/input-compact.html
@@ -1,6 +1,4 @@
-<div class="form-group" ng-class="{'has-feedback': input().$invalid && feedbackSupport,
-                                   'has-error': input().$invalid,
-                                   'has-success': input().$valid && input().$dirty}"
+<div class="form-group"
      tooltip="{{tooltipText()}}"
      tooltip-placement="top"
      tooltip-enable="input().$invalid">
@@ -9,7 +7,7 @@
 
   <ng-transclude></ng-transclude>
 
-  <span ng-show="input().$invalid && feedbackSupport"
+  <span ng-show="input().$invalid && input().$touched && feedbackSupport"
         class="glyphicon glyphicon-warning-sign form-control-feedback"
         aria-hidden="true"></span>
 </div>
