--- a/app/scripts/views/kasittelija/hakemuskaudenHallinta.html
+++ b/app/scripts/views/kasittelija/hakemuskaudenHallinta.html
@@ -76,7 +76,7 @@
             test-ids="$index === 0"
             hakemuskauden-tila="hakemuskausi.tilatunnus"
             hakemus="utils.haeHakemus(hakemuskausi, tyyppitunnus)"
-            on-save="tallennaHakuajat(hakemuskausi.vuosi, utils.haeHakemus(hakemuskausi, tyyppitunnus), values)">
+            on-save="tallennaHakuajat(hakemuskausi.vuosi, utils.haeHakemus(hakemuskausi, tyyppitunnus))">
           </hakemus-summary>
         </hakemuskausi-panel>
       </div>
