LIVIJUKU-498 - haitarikomponentin rakenne on muutettu haitarikomponentin ohjeiden mukaiseksi, jolloin tuotettu html muistuttaa enemmän bootstrapin dokumentin mukaista paneelirakennetta. - haitarin paneelin otsikon taustaväri on valkoinen (nämä tyylit on laitettu sivukohtaisiin tyyleihin styles.styl tiedostoon) - haitarin tilan indikaattorina käytetään kolmiota chevron-symbolin sijaan - haitarin otsikosta on otettu pois ylimääräinen h4 elementti, jolloin vältytään h4 h4 -rakenteelta

--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -256,3 +256,19 @@ textarea
 #hakemus-paatoslinkit
   a
     margin-right 1em
+
+// Kaikki hakemukset näyttö
+#kaikki-hakemukset
+  .panel-group
+    margin-top: 4px;
+  .panel-heading
+    background-color: white
+    //background-color: #0086CA
+    //background-color: #337AB7
+    .panel-title
+      //font-weight: 600
+      font-size: 18px
+      //color: white;
+      padding-top: 4px;
+      padding-bottom: 4px;
+
